Consistent navbar across all pages
also fixed some missing images

--- a/NCAA standings.html
+++ b/NCAA standings.html
@@ -55,75 +55,68 @@
     </style>
 </head>
 <body class="bg-light">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="index.html">Basketball for All</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
-                aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+      <a class="navbar-brand" href="index.html">Basketball for All</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="mainNav">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="nbaDropdown" data-bs-toggle="dropdown"
-                       aria-expanded="false">NBA</a>
-                    <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
-                        <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
-                        <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
-                        <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="ncaadrop" data-bs-toggle="dropdown"
-                       aria-expanded="false">NCAA</a>
-                    <ul class="dropdown-menu" aria-labelledby="ncaadrop">
-                        <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-                        <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
-                        <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="olympicsDrop" data-bs-toggle="dropdown"
-                       aria-expanded="false">Olympics</a>
-                    <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-                        <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
-                        <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
-                        <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="gameChangersDrop" data-bs-toggle="dropdown"
-                       aria-expanded="false">Game Changers</a>
-                    <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
-                        <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
-                        <li><a class="dropdown-item" href="#">Another Page 1</a></li>
-                        <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
-                </li>
+      <div class="collapse navbar-collapse" id="mainNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="nbaDropdown" data-bs-toggle="dropdown"
+              aria-expanded="false">NBA</a>
+            <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
+              <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
+              <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
             </ul>
-        </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="ncaadrop" data-bs-toggle="dropdown"
+              aria-expanded="false">NCAA</a>
+            <ul class="dropdown-menu" aria-labelledby="ncaadrop">
+              <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">NCAA team offense stats</a></li>
+              <li><a class="dropdown-item" href="NCAA standings.html">NCAA top standings</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="olympicsDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Olympics</a>
+            <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
+              <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
+              <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
+              <li><a class="dropdown-item" href="Olympics Legacy.html">Olympic Basketball Legacy</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="gameChangersDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Game Changers</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
+              <li><a class="dropdown-item" href="NCAA gamechangers.html">NCAA gamechangers</a></li>
+              <li><a class="dropdown-item" href="Olympic gamechangers.html">Olympics gamechangers</a></li>
+              </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="fantasyDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Fantasy</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="Sports bet.html">Sports betting</a></li>
+              <li><a class="dropdown-item" href="fantasy.html">Team Builder</a></li>
+              <li><a class="dropdown-item" href="playercompare.html">Compare stats</a></li>
+        </ul>
+      </div>
     </div>
-</nav>
+  </nav>
+
 <div style="border: 1px solid #ccc; padding: 10px; margin-bottom: 10px;">
     <h3>NCAA Men's Basketball 2024-2025 Season Standings</h3>
   
@@ -191,5 +184,9 @@
     </button>
     <p style="font-size: 0.8em; color: #777;">(Opens in a new tab)</p>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
