--- a/Olympics winners.html
+++ b/Olympics winners.html
@@ -40,12 +40,8 @@
               aria-expanded="false">NCAA</a>
             <ul class="dropdown-menu" aria-labelledby="ncaadrop">
               <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">NCAA team offense stats</a></li>
+              <li><a class="dropdown-item" href="NCAA standings.html">NCAA top standings</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -54,11 +50,7 @@
             <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
               <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
               <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
+              <li><a class="dropdown-item" href="Olympics Legacy.html">Olympic Basketball Legacy</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -66,21 +58,22 @@
               aria-expanded="false">Game Changers</a>
             <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
               <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
-            </ul>
+              <li><a class="dropdown-item" href="NCAA gamechangers.html">NCAA gamechangers</a></li>
+              <li><a class="dropdown-item" href="Olympic gamechangers.html">Olympics gamechangers</a></li>
+              </ul>
           </li>
-          <li class="nav-item">
-            <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
-          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="fantasyDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Fantasy</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="Sports bet.html">Sports betting</a></li>
+              <li><a class="dropdown-item" href="fantasy.html">Team Builder</a></li>
+              <li><a class="dropdown-item" href="playercompare.html">Compare stats</a></li>
         </ul>
       </div>
     </div>
   </nav>
+
 
   <div style="border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
     <h3>Olympic Men's Basketball Gold Medalists (Past 20 Years)</h3>
