--- a/NBA about page.html
+++ b/NBA about page.html
@@ -42,12 +42,8 @@
               aria-expanded="false">NCAA</a>
             <ul class="dropdown-menu" aria-labelledby="ncaadrop">
               <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-              <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
+              <li><a class="dropdown-item" href="NCAA team stats.html">NCAA team offense stats</a></li>
+              <li><a class="dropdown-item" href="NCAA standings.html">NCAA top standings</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -56,11 +52,7 @@
             <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
               <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
               <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
+              <li><a class="dropdown-item" href="Olympics Legacy.html">Olympic Basketball Legacy</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -68,21 +60,22 @@
               aria-expanded="false">Game Changers</a>
             <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
               <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 1</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
-            </ul>
+              <li><a class="dropdown-item" href="NCAA gamechangers.html">NCAA gamechangers</a></li>
+              <li><a class="dropdown-item" href="Olympic gamechangers.html">Olympics gamechangers</a></li>
+              </ul>
           </li>
-          <li class="nav-item">
-            <a class="btn btn-outline-light ms-2" href="#">Fantasy</a>
-          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="fantasyDrop" data-bs-toggle="dropdown"
+              aria-expanded="false">Fantasy</a>
+            <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+              <li><a class="dropdown-item" href="Sports bet.html">Sports betting</a></li>
+              <li><a class="dropdown-item" href="fantasy.html">Team Builder</a></li>
+              <li><a class="dropdown-item" href="playercompare.html">Compare stats</a></li>
         </ul>
       </div>
     </div>
   </nav>
+
   <div class="text-center">
     <h1> What is the NBA? </h1>
   </div>
@@ -91,7 +84,7 @@
       <h2> How is basketall played in the NBA? </h2>
       <div style="display: flex; justify-content: space-between; align-items: center;">
         <div style="flex: 1; text-align: left;">
-          <img src="Jalen Green Cade Cunningham Dunk.jpg" alt="Jalen Green Dunk" style="max-width: 100%; height: auto;">
+          <img src="src/Jalen Green Cade Cunningham Dunk.jpg" alt="Jalen Green Dunk" style="max-width: 100%; height: auto;">
 
         </div>
         <div style="flex: 1; text-align: right;">
@@ -114,7 +107,7 @@
             that can take on NBA championship teams.</p>
         </div>
         <div style="flex: 1; text-align: right;">
-          <img src="Nikola Jokic championship.jpg" alt="Nikola Jokic" style="max-width: 100%; height: auto;">
+          <img src="src/Nikola Jokic championship.jpg" alt="Nikola Jokic" style="max-width: 100%; height: auto;">
         </div>
       </div>
 
@@ -123,9 +116,9 @@
         have been debates suggesting that the NBA isn't "international" because of it's North American playing
         locations. To rebutal that argument; It's nearly impossible to find any basketball team outside of the NBA that
         can take on NBA championship teams. </p4>
-      <img src="Jaylen Brown.avif" width=475 height=350 alt="Jalyen Brown">
-      <img src="Giannis and Dame.webp" width=475 height=350 alt="Giannis and Dame">
-      <img src="Lebron n Luka.jpeg" width=475 height=350 alt="Lebron n Luka">
+      <img src="src/Jaylen Brown.avif" width=475 height=350 alt="Jalyen Brown">
+      <img src="src/Giannis and Dame.webp" width=475 height=350 alt="Giannis and Dame">
+      <img src="src/Lebron n Luka.jpeg" width=475 height=350 alt="Lebron n Luka">
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
