--- a/NCAA team stats.html
+++ b/NCAA team stats.html
@@ -7,8 +7,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
   <link rel='stylesheet' href="stylesheet.css">
-
-  <title>Olympics Basketball</title>
 </head>
 
 <body>
@@ -74,73 +72,101 @@
     </div>
   </nav>
 
-  <img src="USA-Basketball-2024-Paris-Olympics-team-pool.jpg" alt="USA 2024 Olympic team">
-  <img src="Olympic Steph Curry.jpeg" height=275 alt="Steph Curry">
-  <img src="Lebron Tatum Olympics.jpeg" height=275 alt="Lebron Tatum Olympics">
   <div style="border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
-    <h3>Olympic Basketball Rules vs. NBA Basketball: A Summary</h3>
-    <p>While the core objective of basketball remains the same in the Olympics and the NBA (National Basketball
-      Association) – scoring by shooting a ball through a hoop – there are several key differences in the rules and
-      gameplay.</p>
+    <h3>NCAA Men's Basketball Offensive Rating (Points Per Game)</h3>
+    <p>Here is a list of teams and their points per game (PPG), which serves as a measure of their offensive rating for
+      the current season:</p>
+    <ol>
+      <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+        <div>
+          <li>Alabama: 90.7</li>
 
-    <h4>Key Differences:</h4>
-    <ul>
-      <li>
-        <strong>Game Length:</strong> Olympic (FIBA) games consist of four 10-minute quarters (40 minutes total), while
-        NBA games have four 12-minute quarters (48 minutes total).
-      </li>
-      <li>
-        <strong>Fouls:</strong> In the Olympics, a player is disqualified after committing 5 personal fouls. In the NBA,
-        the limit is 6 personal fouls. Technical fouls count towards the player's foul count in the Olympics but not in
-        the NBA. This means NBA players can accumulate up to 6 personal fouls and two technical fouls before getting
-        ejected.
-      </li>
-      <li>
-        <strong>Timeouts:</strong> Olympic teams have fewer timeouts available compared to NBA teams, and the rules for
-        calling them can differ, especially in the final minutes. Olympic timeouts are also typically shorter.
-      </li>
-      <li>
-        <strong>Goaltending:</strong> Olympic (FIBA) rules allow players to touch the ball after it hits the rim, even
-        if it's on a downward trajectory. NBA rules prohibit any interference once the ball is on its downward path
-        towards the basket. Cleanblocks unfortunately can be counted as goaltending when the ball is on a downward
-        trajectory.
-      </li>
-      <li>
-        <strong>Three-Point Line:</strong> The three-point line is slightly closer to the basket in Olympic (FIBA)
-        basketball (6.75 meters) compared to the NBA (ranging from 7.24 meters straightaway to 6.70 meters in the
-        corners). NBA players find it easier to shoot 3s during the Olympics.
-      </li>
-      <li>
-        <strong>Court Dimensions:</strong> Olympic basketball courts are slightly smaller than NBA courts.
-      </li>
-      <li>
-        <strong>Shot Clock After Offensive Rebound:</strong> While both use a 24-second shot clock, after an offensive
-        rebound, the shot clock resets to 14 seconds in both NBA and FIBA (Olympics).
-      </li>
-      <li>
-        <strong>Defensive Three-Second Rule:</strong> The NBA has a defensive three-second rule, restricting how long a
-        defender can stay in the painted area without actively guarding an opponent. This rule does not exist in Olympic
-        (FIBA) basketball, which can lead to different defensive strategies. This rule stops players from camping under
-        the basket.
-      </li>
-      <li>
-        <strong>Jump Ball Situations:</strong> The NBA uses jump balls to determine possession throughout the game.
-        Olympic rules use an alternating possession rule after the initial jump ball.
-      </li>
+        </div>
+        <img src="src/AlabamaNCAAbasketball.jpg" width=250 height=150 alt="NCAA Alabama" style="margin-left: 10px;">
+      </div>
+      <li>Gonzaga: 86.4</li>
+      <li>South Dakota: 85.2</li>
+      <li>Cornell: 85.1</li>
+      <li>Florida: 84.8</li>
+      <li>Winthrop: 84.7</li>
+      <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+        <div>
+          <li>Kentucky: 84.4</li>
 
-    </ul>
+        </div>
+        <img src="src/NCAA Kentucy .avif" width=250 height=150 alt="NCAA Kentucky" style="margin-left: 10px;">
+      </div>
+      <li>Akron: 84.0</li>
+      <li>Missouri: 83.6</li>
+      <li>Illinois: 83.6</li>
+      <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+        <div>
+          <li>Duke: 83.2</li>
 
-    <h4>Relationship to NBA Basketball:</h4>
-    <p>Despite these differences, the fundamental skills and strategies of basketball translate between the two. Many
-      NBA players participate in the Olympics, requiring them to adapt to the FIBA ruleset for the duration of the
-      tournament. And to be frank it's a little easier playing in Olympic basketball than the NBA. While the nuances can
-      impact gameplay and strategy, the high level of athleticism and basketball IQ prevalent in the NBA often allows
-      these players to adjust and compete effectively under Olympic rules. The past two decades of Olympics basketball
-      gold medalists reflects that statement.</p>
+        </div>
+        <img src="src/NCAA Duke basketball.webp" width=250 height=150 alt="NCAA Duke" style="margin-left: 10px;">
+      </div>
+      <li>Auburn: 83.0</li>
+      <li>Samford: 82.9</li>
+      <li>North Florida: 82.8</li>
+      <li>Arizona: 82.5</li>
+      <li>Iowa: 82.5</li>
+      <li>UNC Asheville: 82.2</li>
+      <li>UAB: 82.2</li>
+      <li>Cal Poly: 82.1</li>
+      <li>Santa Clara: 81.9</li>
+      <li>Bryant: 81.8</li>
+      <li>High Point: 81.7</li>
+      <li>BYU: 81.4</li>
+      <li>Yale: 81.3</li>
+      <li>North Dakota St.: 81.1</li>
+      <li>Maryland: 81.1</li>
+      <li>Texas Tech: 80.9</li>
+      <li>North Carolina: 80.7</li>
+      <li>Purdue Fort Wayne: 80.7</li>
+      <li>Northern Colo.: 80.6</li>
+      <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+        <div>
+          <li>Miami (OH): 80.6</li>
+
+        </div>
+        <img src="src/NCAA Miami.webp" width=250 height=150 alt="NCAA Miami" style="margin-left: 10px;">
+      </div>
+      <li>New Mexico: 80.5</li>
+      <li>Iowa St.: 80.3</li>
+      <li>CSUN: 80.3</li>
+      <div style="display: flex; align-items: center; border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
+        <div>
+          <li>Wisconsin: 80.1</li>
+
+        </div>
+        <img src="src/NCAA wisconsin.webp" width=250 height=150 alt="NCAA Wisconsin" style="margin-left: 10px;">
+      </div>
+      <li>Indiana St.: 80.1</li>
+      <li>Morgan St.: 80.0</li>
+      <li>UMBC: 80.0</li>
+      <li>SMU: 79.9</li>
+      <li>Utah St.: 79.9</li>
+      <li>Memphis: 79.9</li>
+      <li>Ohio: 79.8</li>
+      <li>UCF: 79.8</li>
+      <li>Chattanooga: 79.7</li>
+      <li>South Dakota St.: 79.6</li>
+      <li>Mississippi St.: 79.5</li>
+      <li>South Carolina St.: 79.5</li>
+      <li>UMass Lowell: 79.5</li>
+      <li>Arkansas St.: 79.4</li>
+      <li>UC San Diego: 79.3</li>
+    </ol>
+    <p style="font-size: 0.8em; color: #777;">(Based on data provided.)</p>
   </div>
+
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
