--- a/Sports bet.html
+++ b/Sports bet.html
@@ -28,8 +28,8 @@
 
         #total-basket-container {
             position: absolute;
-            top: 70px;
-            right: 10px;
+            top: 400px;
+            right: 100px;
             z-index: 1000;
         }
     </style>
@@ -38,72 +38,65 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Basketball for All</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
-                aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="mainNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="nbaDropdown" data-bs-toggle="dropdown"
-                            aria-expanded="false">NBA</a>
-                        <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
-                            <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
-                            <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
-                            <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="ncaadrop" data-bs-toggle="dropdown"
-                            aria-expanded="false">NCAA</a>
-                        <ul class="dropdown-menu" aria-labelledby="ncaadrop">
-                            <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
-                            <li><a class="dropdown-item" href="NCAA team stats.html">Team offense Stats 1</a></li>
-                            <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="olympicsDrop" data-bs-toggle="dropdown"
-                            aria-expanded="false">Olympics</a>
-                        <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
-                            <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
-                            <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
-                            <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="gameChangersDrop" data-bs-toggle="dropdown"
-                            aria-expanded="false">Game Changers</a>
-                        <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
-                            <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
-                            <li><a class="dropdown-item" href="#">Another Page 1</a></li>
-                            <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-outline-light ms-2" href="NBA betting.html">Fantasy</a>
-                    </li>
+          <a class="navbar-brand" href="index.html">Basketball for All</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+            aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+    
+          <div class="collapse navbar-collapse" id="mainNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="nbaDropdown" data-bs-toggle="dropdown"
+                  aria-expanded="false">NBA</a>
+                <ul class="dropdown-menu" aria-labelledby="nbaDropdown">
+                  <li><a class="dropdown-item" href="NBA stat leaders.html">Stat Leaders</a></li>
+                  <li><a class="dropdown-item" href="NBA about page.html">About NBA</a></li>
+                  <li><a class="dropdown-item" href="NBA season tickets.html">Season Tickets</a></li>
+                  <li>
+                    <hr class="dropdown-divider">
+                  </li>
+                  <li><a class="dropdown-item" href="nba_standings.html">Standings</a></li>
                 </ul>
-            </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="ncaadrop" data-bs-toggle="dropdown"
+                  aria-expanded="false">NCAA</a>
+                <ul class="dropdown-menu" aria-labelledby="ncaadrop">
+                  <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
+                  <li><a class="dropdown-item" href="NCAA team stats.html">NCAA team offense stats</a></li>
+                  <li><a class="dropdown-item" href="NCAA standings.html">NCAA top standings</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="olympicsDrop" data-bs-toggle="dropdown"
+                  aria-expanded="false">Olympics</a>
+                <ul class="dropdown-menu" aria-labelledby="olympicsDrop">
+                  <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
+                  <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
+                  <li><a class="dropdown-item" href="Olympics Legacy.html">Olympic Basketball Legacy</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="gameChangersDrop" data-bs-toggle="dropdown"
+                  aria-expanded="false">Game Changers</a>
+                <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+                  <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
+                  <li><a class="dropdown-item" href="NCAA gamechangers.html">NCAA gamechangers</a></li>
+                  <li><a class="dropdown-item" href="Olympic gamechangers.html">Olympics gamechangers</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="fantasyDrop" data-bs-toggle="dropdown"
+                  aria-expanded="false">Fantasy</a>
+                <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
+                  <li><a class="dropdown-item" href="Sports bet.html">Sports betting</a></li>
+                  <li><a class="dropdown-item" href="fantasy.html">Team Builder</a></li>
+                  <li><a class="dropdown-item" href="playercompare.html">Compare stats</a></li>
+            </ul>
+          </div>
         </div>
-    </nav>
+      </nav>
     <div class="container max-w-md bg-white shadow-md rounded-lg p-8">
         <h1 class="text-2xl font-semibold text-blue-600 mb-6 text-center">Sports Bet Multiplier</h1>
         <div class="mb-4">
@@ -145,7 +138,7 @@
             class="bg-green-500 hover:bg-green-700 text- font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Calculate
             Potential Winnings</button>
     </div>
-    <div id="total-basket-container" class="bg-white shadow-md rounded-lg p-4 mt-2">
+    <div id="total-basket-container" class="bg-white shadow-md rounded-lg p-4 mt-6">
         <h1 class="text-lg font-semibold text-blue-600 mb-2 text-center">Total Basket</h1>
         <div class="mb-2">
             <p class="block text-gray-700 text-sm font-bold mb-1">Total Potential Winnings:</p>
@@ -213,6 +206,10 @@
     <p style="font-size: 0.8em; color: #777;">(Opens in a new tab)</p>
   </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
+crossorigin="anonymous"></script>
+
 </body>
 
 </html>
