--- a/playercompare.html
+++ b/playercompare.html
@@ -83,6 +83,7 @@
         aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
       <div class="collapse navbar-collapse" id="mainNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item dropdown">
@@ -105,10 +106,6 @@
               <li><a class="dropdown-item" href="NCAA stat leaders.html">Stat Leaders</a></li>
               <li><a class="dropdown-item" href="NCAA team stats.html">NCAA team offense stats</a></li>
               <li><a class="dropdown-item" href="NCAA standings.html">NCAA top standings</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -118,10 +115,6 @@
               <li><a class="dropdown-item" href="About Olympics Basketball.html">About Olympics Basketball</a></li>
               <li><a class="dropdown-item" href="Olympics winners.html">Olympics Winners</a></li>
               <li><a class="dropdown-item" href="Olympics Legacy.html">Olympic Basketball Legacy</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -131,11 +124,7 @@
               <li><a class="dropdown-item" href="NBA gamechangers.html">NBA gamechangers</a></li>
               <li><a class="dropdown-item" href="NCAA gamechangers.html">NCAA gamechangers</a></li>
               <li><a class="dropdown-item" href="Olympic gamechangers.html">Olympics gamechangers</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
-            </ul>
+              </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="fantasyDrop" data-bs-toggle="dropdown"
@@ -143,18 +132,12 @@
             <ul class="dropdown-menu" aria-labelledby="gameChangersDrop">
               <li><a class="dropdown-item" href="Sports bet.html">Sports betting</a></li>
               <li><a class="dropdown-item" href="fantasy.html">Team Builder</a></li>
-              <li><a class="dropdown-item" href="#">Another Page 2</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else</a></li>
-            </ul>
-          </li>
+              <li><a class="dropdown-item" href="playercompare.html">Compare stats</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="text-center">
+<div class="text-center">
     <div class="comparison-container">
       <h2 class="text-2xl font-semibold text-gray-800 mb-4 text-center">Compare Player Stats</h2>
       <div class="player-select-container">
@@ -301,6 +284,9 @@
         function buttonClick() {
             document.getElementById("output").innerHTML = "Button Clicked!";
         }
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous">
     </script>
 </body>
 
