--- a/NBA season tickets.html
+++ b/NBA season tickets.html
@@ -86,7 +86,7 @@
       <label for="quantity">Enter the quantity:</label>
       <input type="number" id="quantity" name="quantity" min="1" value="1">
     </div>
-    <button onclick="calculateTotal()">Calculate Total</button>
+    <button class="btn btn-primary" onclick="calculateTotal()">Calculate Total</button>
     <div>
       <h3>Total Price: <span id="total-price">$0.00</span></h3>
     </div>
