--- a/Olympic gamechangers.html
+++ b/Olympic gamechangers.html
@@ -114,7 +114,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="Michael and Magic Olympics.jpeg"
+                    <img src="src/Michael and Magic Olympics.jpeg"
                         class="card-img-top" alt="Magic Johnson Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Magic Johnson</h5>
