--- a/NBA gamechangers.html
+++ b/NBA gamechangers.html
@@ -83,7 +83,7 @@
       <!-- Bill Russell -->
       <div class="col">
         <div class="card h-100">
-          <img src="Bill Russel.jpeg" class="card-img-top" alt="Bill Russell holding championship trophy">
+          <img src="src/Bill Russel.jpeg" class="card-img-top" alt="Bill Russell holding championship trophy">
           <div class="card-body">
             <h5 class="card-title">Bill Russell</h5>
             <p class="card-text">Bill Russell was the ultimate winner, securing 11 NBA championships in just 13 seasons
@@ -100,7 +100,7 @@
       <!-- Magic Johnson & Larry Bird -->
       <div class="col">
         <div class="card h-100">
-          <img src="Larry Bird vs Magic Johnson.jpeg" class="card-img-top" alt="Larry Bird guarding Magic Johnson">
+          <img src="src/Larry Bird vs Magic Johnson.jpeg" class="card-img-top" alt="Larry Bird guarding Magic Johnson">
           <div class="card-body">
             <h5 class="card-title">Magic Johnson & Larry Bird</h5>
             <p class="card-text">Magic Johnson and Larry Bird didn't just save the NBA — they supercharged it. Their
@@ -116,7 +116,7 @@
       <!-- Michael Jordan -->
       <div class="col">
         <div class="card h-100">
-          <img src="Michael Jordan.jpeg" class="card-img-top" alt="Michael Jordan dunking a basketball">
+          <img src="src/Michael Jordan.jpeg" class="card-img-top" alt="Michael Jordan dunking a basketball">
           <div class="card-body">
             <h5 class="card-title">Michael Jordan</h5>
             <p class="card-text">Michael Jordan wasn't just dominant — he was transcendent. His relentless competitive
@@ -132,7 +132,7 @@
       <!-- Allen Iverson -->
       <div class="col">
         <div class="card h-100">
-          <img src="Allen Iverson.jpeg" class="card-img-top" alt="Allen Iverson crossing over defender">
+          <img src="src/Allen Iverson.jpeg" class="card-img-top" alt="Allen Iverson crossing over defender">
           <div class="card-body">
             <h5 class="card-title">Allen Iverson</h5>
             <p class="card-text">Allen Iverson embodied grit, heart, and defiance. At just six feet tall, he electrified
@@ -148,7 +148,7 @@
       <!-- Stephen Curry -->
       <div class="col">
         <div class="card h-100">
-          <img src="Stephen Curry 3 point record.jpg" class="card-img-top"
+          <img src="src/Stephen Curry 3 point record.jpg" class="card-img-top"
             alt="Stephen Curry celebrating three-point record">
           <div class="card-body">
             <h5 class="card-title">Stephen Curry</h5>
