--- a/Olympic gamechangers.html
+++ b/Olympic gamechangers.html
@@ -100,7 +100,7 @@
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="michael-jordan.jpg" class="card-img-top" alt="Michael Jordan Olympics">
+                    <img src="src/michael-jordan.jpg" class="card-img-top" alt="Michael Jordan Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Michael Jordan</h5>
                         <p class="card-text">
@@ -130,7 +130,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="Magic and Bird olympics.jpg"
+                    <img src="src/Magic and Bird olympics.jpg"
                         class="card-img-top" alt="Larry Bird Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Larry Bird</h5>
@@ -145,7 +145,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="Lisa Leslie Olympics.jpg"
+                    <img src="src/Lisa Leslie Olympics.jpg"
                         class="card-img-top" alt="Lisa Leslie Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Lisa Leslie</h5>
@@ -160,7 +160,7 @@
             </div>
             <div class="col">
                 <div class="card h-100">
-                    <img src="Manu Ginobli olympics.jpg"
+                    <img src="src/Manu Ginobli olympics.jpg"
                         class="card-img-top" alt="Manu Ginóbili Olympics">
                     <div class="card-body">
                         <h5 class="card-title">Manu Ginóbili</h5>
