--- a/index.html
+++ b/index.html
@@ -226,16 +226,16 @@
       'goat-debate': document.getElementById('goat-debate'),
     };
 
-    dropdownBtn.addEventListener('click', () => {
+    //dropdownBtn.addEventListener('click', () => {
       dropdownContent.classList.toggle('show');
     });
 
 
-    window.addEventListener('click', (event) => {
-      if (!event.target.matches('.dropdown-btn') && !event.target.closest('.dropdown-content')) {
-        dropdownContent.classList.remove('show');
-      }
-    });
+   // window.addEventListener('click', (event) => {
+   //   if (!event.target.matches('.dropdown-btn') && !event.target.closest('.dropdown-content')) {
+   //     dropdownContent.classList.remove('show');
+   //   }
+   // });
 
     postList.addEventListener('click', (event) => {
       event.preventDefault();
