Update About Olympics Basketball.html

--- a/About Olympics Basketball.html
+++ b/About Olympics Basketball.html
@@ -75,8 +75,8 @@
   </nav>
 
   <img src="src/USA-Basketball-2024-Paris-Olympics-team-pool.jpg" alt="USA 2024 Olympic team">
-  <img src="Olympic Steph Curry.jpeg" height=275 alt="Steph Curry">
-  <img src="Lebron Tatum Olympics.jpeg" height=275 alt="Lebron Tatum Olympics">
+  <img src="src/Olympic Steph Curry.jpeg" height=275 alt="Steph Curry">
+  <img src="src/Lebron Tatum Olympics.jpeg" height=275 alt="Lebron Tatum Olympics">
   <div style="border: 1px solid #ccc; padding: 15px; margin-bottom: 15px;">
     <h3>Olympic Basketball Rules vs. NBA Basketball: A Summary</h3>
     <p>While the core objective of basketball remains the same in the Olympics and the NBA (National Basketball
