:Comment section fixed

--- a/index.html
+++ b/index.html
@@ -226,16 +226,19 @@
       'goat-debate': document.getElementById('goat-debate'),
     };
 
-    //dropdownBtn.addEventListener('click', () => {
+
+    //Scrapped code
+    /*
+    dropdownBtn.addEventListener('click', () => {
       dropdownContent.classList.toggle('show');
     });
+    
 
-
-   // window.addEventListener('click', (event) => {
-   //   if (!event.target.matches('.dropdown-btn') && !event.target.closest('.dropdown-content')) {
-   //     dropdownContent.classList.remove('show');
-   //   }
-   // });
+    window.addEventListener('click', (event) => {
+      if (!event.target.matches('.dropdown-btn') && !event.target.closest('.dropdown-content')) {
+        dropdownContent.classList.remove('show');
+      }
+    });
 
     postList.addEventListener('click', (event) => {
       event.preventDefault();
@@ -251,6 +254,7 @@
         dropdownContent.classList.remove('show');
       }
     });
+    */
 
     submitButton.addEventListener('click', () => {
       const commentText = commentInput.value.trim();
